--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,8 +4,10 @@
 // bower:scss
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "../../bower_components/font-awesome/scss/font-awesome.scss";
+@import "../../bower_components/include-media/dist/_include-media.scss";
 // endbower
 
+@import "common/mixins";
 @import "common/global";
 @import "components/buttons";
 @import "components/comments";
